# CRAFT-tensorflow

./: .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  devenv.nix  devenv.yaml  justfile  pyproject.toml
src/: savedmodel_inference.py
src/v1/: OHEM.py  augment.py  augment_n.py  craft.py  datagen.py  file_utils.py  loss.py  net.py  text_utils.py  upconvBlock.py  vgg.py
src/v2/: OHEM_v2.py  augment.py  augment_n_v2.py  craft.py  craft_v2.py  datagen_v2.py  inference.py  inference_v2.py  net.py  net_v2.py  text_utils.py  upconvBlock_v2.py  vgg.py  vgg_v2.py
